# conformal_human_motion_prediction

./: .gitignore  CLAUDE.md  README.md  index.html  pyproject.toml  requirements.txt  requirements_noversion.txt
datasets/: README.md
docker/: .dockerignore  .env.example  Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  router.json5  run.sh  setup_env.sh  shell.sh  stop.sh
docs/: RESULTS.md  implementation_plan.md
experiments/coverage/: README.md  iso_coverage.py  run_full_sweep.sh  run_variant.sh  summarize.py  wait_and_run.sh
final_results/: create_full_conformal_prediction_results_table.sh  full_pipeline_ood_handling_evaluation.sh  motion_prediction_conformal_prediction_set_results.sh  motion_prediction_no_uncertainty_no_ood_results.sh  robot_shield_safety_results.sh
models/: README.md
ros2_packages/: QUICKSTART.md  README.md  SETUP_SUMMARY.md  build_packages.sh
ros2_packages/uq_inference/: README.md  package.xml  setup.cfg  setup.py
ros2_packages/uq_inference/config/: default_params.yaml  pose_pipeline.yaml
ros2_packages/uq_inference/launch/: pose_pipeline.launch.py  pose_pipeline_with_queue.launch.py
ros2_packages/uq_inference/uq_inference/: __init__.py  image_processor_node.py  pose_pipeline_node.py  pose_pipeline_with_queue_node.py  uq_wrapper.py
ros2_ws/: .gitignore  README.md  setup_workspace.sh
scripts/: build_motion_models.py  download_models.py
src/conformal_human_motion_prediction/: __init__.py
src/conformal_human_motion_prediction/datasets/: __init__.py  h36m.py  h36m_motion_prediction.py  h36m_preprocessed.py  human_rgbd.py  tiger_pose.py  utils.py  wrapper.py
src/conformal_human_motion_prediction/examples/: README.md  README_pose_ood_evaluation.md  analyze_shield_failures.py  debug_3d_pose_visualization.py  debug_pose_visualization.py  debug_pose_visualization_yolo.py  debug_preprocessed_pose.py  debug_preprocessed_tiger.py  debug_rgbd_2d_visualization.py  debug_rgbd_2d_visualization_yolo.py  debug_rgbd_3d_visualization.py  debug_tiger_pose.py  debug_visualize_motion_prediction.py  eval_full_pipeline.py  eval_full_pipeline_rgbd_yolo.py  evaluate_preprocessed_h36m.py  id_vs_ood_motion_prediction.py  id_vs_ood_pose_prediction.py  motion_prediction.py  motion_prediction_debug.py  plot_ood_scores.py  plot_ood_scores_motion_prediction.py  pose_estimation_2D.py  pose_estimation_2D_yolo.py  pose_estimation_2d_with_ood.py  pose_estimation_3D.py  pose_estimation_3D_full_eval.py  pose_estimation_3D_full_eval_rgbd.py  pose_estimation_3D_full_eval_rgbd_yolo.py  pose_estimation_3D_full_eval_stereo_const_depth.py  pose_estimation_3D_full_eval_stereo_const_depth_yolo.py  pose_estimation_3D_full_eval_yolo.py  robot_collision_test.py  shield_gpu.py  simulate_robot_shield.py  test_h36m_data.py
src/conformal_human_motion_prediction/generate_plots/: conformal_results_common.py  generate_conformal_prediction_set_results.py  generate_full_conformal_prediction_results_table.py  (+3 more)
static/css/: index.css
static/js/: index.js
tests/: test_batched_pipeline_equivalence.py  test_buffer_functions.py  test_coverage_evaluation_comparison.py  test_eval_utils.py  test_gpu_accelerated_utils.py  test_gpu_utils_comparison.py
(+59 files in other folders)
